# csv2dic

./: Cargo.toml
resource/: template.md
resource/tests/expects/dest/: case1.md  case2.md
resource/tests/given/convert/: case1.csv  case2.csv  error_case1.csv  error_case2.csv
src/: converts.rs  csv_src.rs  dest.rs  error.rs  lib.rs  main.rs  template.rs  word.rs
