[package]
name = "csv2dic"
version = "0.1.0"
authors = ["qwerty2501 <qwerty2501@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
test-case = "0.3.3"
