[package]
name = "csv2dic"
version = "0.1.0"
authors = ["tgoikawa <kosuke.oikawa@topgate.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
test-case = "0.3.3"
validator = "0.10"
validator_derive = "0.10"
serde_json = "1.0"
regex = "1"
lazy_static = "1.4.0"
comrak = "0.6"
